lib/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(seg) { return cleanup(), seg; },
        peg$c1 = " ",
        peg$c2 = { type: "literal", value: " ", description: "\" \"" },
        peg$c3 = "\n",
        peg$c4 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c5 = /^[0-9]/,
        peg$c6 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c7 = /^[a-zA-Z_]/,
        peg$c8 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c9 = "\"",
        peg$c10 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c11 = "\\\"",
        peg$c12 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c13 = /^[^"]/,
        peg$c14 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c15 = function(str) { return str.join(''); },
        peg$c16 = "'",
        peg$c17 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c18 = "\\'",
        peg$c19 = { type: "literal", value: "\\'", description: "\"\\\\'\"" },
        peg$c20 = /^[^']/,
        peg$c21 = { type: "class", value: "[^']", description: "[^']" },
        peg$c22 = ".",
        peg$c23 = { type: "literal", value: ".", description: "\".\"" },
        peg$c24 = function(i, d) { return parseFloat(i.join('') + '.' + d.join(''), 10); },
        peg$c25 = function(i) { return parseInt(i.join(''), 10); },
        peg$c26 = "+",
        peg$c27 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c28 = function(n) { return n; },
        peg$c29 = "-",
        peg$c30 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c31 = function(n) { return -n; },
        peg$c32 = "undefined",
        peg$c33 = { type: "literal", value: "undefined", description: "\"undefined\"" },
        peg$c34 = function() { return undefined; },
        peg$c35 = "null",
        peg$c36 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c37 = function() { return null; },
        peg$c38 = "true",
        peg$c39 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c40 = function() { return true; },
        peg$c41 = "false",
        peg$c42 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c43 = function() { return false; },
        peg$c44 = "NaN",
        peg$c45 = { type: "literal", value: "NaN", description: "\"NaN\"" },
        peg$c46 = function() { return NaN; },
        peg$c47 = /^[+\-]/,
        peg$c48 = { type: "class", value: "[+-]", description: "[+-]" },
        peg$c49 = "Infinity",
        peg$c50 = { type: "literal", value: "Infinity", description: "\"Infinity\"" },
        peg$c51 = function(sign) { return sign === '-' ? -Infinity : Infinity; },
        peg$c52 = "*",
        peg$c53 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c54 = "/",
        peg$c55 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c56 = "%",
        peg$c57 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c58 = "^",
        peg$c59 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c60 = "&&",
        peg$c61 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c62 = "||",
        peg$c63 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c64 = "&",
        peg$c65 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c66 = "|",
        peg$c67 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c68 = "=",
        peg$c69 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c70 = function() { return '==='; },
        peg$c71 = "!=",
        peg$c72 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c73 = "<>",
        peg$c74 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c75 = function() { return '!=='; },
        peg$c76 = "<=",
        peg$c77 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c78 = "<",
        peg$c79 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c80 = ">=",
        peg$c81 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c82 = ">",
        peg$c83 = { type: "literal", value: ">", description: "\">\"" },
        peg$c84 = function(op) { return { type:'operator', value:op }; },
        peg$c85 = "!",
        peg$c86 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c87 = function(neg) { return { type:'negate', value:neg.map(function (n) { return n[0].join(''); }).join('') }; },
        peg$c88 = "(",
        peg$c89 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c90 = function() { return { type:'parenOpen' }; },
        peg$c91 = ")",
        peg$c92 = { type: "literal", value: ")", description: "\")\"" },
        peg$c93 = function() { return { type:'parenClose' }; },
        peg$c94 = function(left, right) { return left + right.join(''); },
        peg$c95 = function(left) { return left; },
        peg$c96 = function(open, left, close, op, right) { return [open].concat(left).concat([close,op]).concat(right); },
        peg$c97 = function(open, expr, close) { return [open].concat(expr).concat([close]); },
        peg$c98 = function(neg, val, op, expr) { return [neg, val, op ].concat(expr); },
        peg$c99 = function(val, op, expr) { return [ val, op ].concat(expr); },
        peg$c100 = function(neg, val) { return [neg, val]; },
        peg$c101 = function(val) { return [val]; },
        peg$c102 = ",",
        peg$c103 = { type: "literal", value: ",", description: "\",\"" },
        peg$c104 = function(left, right) { return [left].concat(right); },
        peg$c105 = function(expr) { return [expr]; },
        peg$c106 = function(args) { return args; },
        peg$c107 = function() { return []; },
        peg$c108 = function(name, args) { return { name:name, args:args }; },
        peg$c109 = "~",
        peg$c110 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c111 = function(p) { return p.join(''); },
        peg$c112 = function(parent, left, sep, right) { return left + sep.join('') + right; },
        peg$c113 = function(parent, path) { return (parent || '') + path; },
        peg$c114 = function(left, right) { return left + '.' + right; },
        peg$c115 = ":",
        peg$c116 = { type: "literal", value: ":", description: "\":\"" },
        peg$c117 = function(path, props, args) { return { path:path, args:args, props:props }; },
        peg$c118 = function(path, args) { return { path:path, args:args }; },
        peg$c119 = function(path, props) { return { path:path, props:props }; },
        peg$c120 = function(path) { return { path:path }; },
        peg$c121 = function(val) { return { type:'reserved', value:val }; },
        peg$c122 = function(val) { return { type:'context', value:val }; },
        peg$c123 = function(val) { return { type:'string', value:val }; },
        peg$c124 = function(val) { return { type:'number', value:val }; },
        peg$c125 = "?",
        peg$c126 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c127 = function() { return 'conditional'; },
        peg$c128 = "@",
        peg$c129 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c130 = function() { return 'iterator'; },
        peg$c131 = function() { return 'custom'; },
        peg$c132 = "#",
        peg$c133 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c134 = function() { return 'namedDeclare'; },
        peg$c135 = function() { return 'namedRender'; },
        peg$c136 = function() { return 'partial'; },
        peg$c137 = { type: "any", description: "any character" },
        peg$c138 = function(invalidType) { return invalidType; },
        peg$c139 = "\\",
        peg$c140 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c141 = function(ctx) { return ctx; },
        peg$c142 = function(seg) { var loc = location().start;  seg.offset = loc.offset; seg.line = loc.line; seg.column = loc.column; return seg; },
        peg$c143 = "{{",
        peg$c144 = { type: "literal", value: "{{", description: "\"{{\"" },
        peg$c145 = "}",
        peg$c146 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c147 = function(ctx, expr, modifiers) { return { type:'output', context:ctx, expression:expr, modifiers:modifiers || [] }; },
        peg$c148 = "{",
        peg$c149 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c150 = function(type, ctx, expr, modifiers) { return enterSegment(type), { type:type, context:ctx, expression:expr, modifiers:modifiers || [] }; },
        peg$c151 = function(type, ctx, expr, modifiers) { return enterSegment(type, true), { type:type, context:ctx, expression:expr, modifiers:modifiers || [], closing:true }; },
        peg$c152 = function(type, expr, modifiers) { return nextSegment(type, !!expr), { type:type, expression:expr, modifier:modifiers || [], next:true }; },
        peg$c153 = function(type) { return exitSegment(type), { type:type, closing:true }; },
        peg$c154 = /^[{]/,
        peg$c155 = { type: "class", value: "[{]", description: "[{]" },
        peg$c156 = /^[^{]/,
        peg$c157 = { type: "class", value: "[^{]", description: "[^{]" },
        peg$c158 = function(str) { return (str[0] || '') + str[1].join(''); },
        peg$c159 = function(txt) { return { type:'text', content:txt }; },
        peg$c160 = function(left, right) { return [{ name:left.name, args:left.args }].concat(right); },
        peg$c161 = function(left, right) { return [{ name:left, args:[] }].concat(right); },
        peg$c162 = function(left) { return [{ name:left.name, args:left.args }]; },
        peg$c163 = function(left) { return [{ name:left, args:[] }]; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsesegment();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsesegment();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsespace() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c1;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s0 = peg$c3;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s0 = peg$c3;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
        }
      }

      return s0;
    }

    function peg$parsedigit() {
      var s0;

      if (peg$c5.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parseletter() {
      var s0;

      if (peg$c7.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      return s0;
    }

    function peg$parsestring() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 34) {
        s1 = peg$c9;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (input.substr(peg$currPos, 2) === peg$c11) {
          s3 = peg$c11;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s3 === peg$FAILED) {
          if (peg$c13.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c14); }
          }
        }
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            if (input.substr(peg$currPos, 2) === peg$c11) {
              s3 = peg$c11;
              peg$currPos += 2;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s3 === peg$FAILED) {
              if (peg$c13.test(input.charAt(peg$currPos))) {
                s3 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
            }
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 34) {
            s3 = peg$c9;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c15(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 39) {
          s1 = peg$c16;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c17); }
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          if (input.substr(peg$currPos, 2) === peg$c18) {
            s3 = peg$c18;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s3 === peg$FAILED) {
            if (peg$c20.test(input.charAt(peg$currPos))) {
              s3 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c21); }
            }
          }
          if (s3 !== peg$FAILED) {
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              if (input.substr(peg$currPos, 2) === peg$c18) {
                s3 = peg$c18;
                peg$currPos += 2;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c19); }
              }
              if (s3 === peg$FAILED) {
                if (peg$c20.test(input.charAt(peg$currPos))) {
                  s3 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c21); }
                }
              }
            }
          } else {
            s2 = peg$FAILED;
          }
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 39) {
              s3 = peg$c16;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c17); }
            }
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c15(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parsenumber() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsedigit();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parsedigit();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s2 = peg$c22;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsedigit();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parsedigit();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c24(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parsedigit();
        if (s2 !== peg$FAILED) {
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parsedigit();
          }
        } else {
          s1 = peg$FAILED;
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c25(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 43) {
            s1 = peg$c26;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c27); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parsenumber();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c28(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 45) {
              s1 = peg$c29;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c30); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parsenumber();
              if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c31(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          }
        }
      }

      return s0;
    }

    function peg$parsereserved() {
      var s0, s1, s2;
